--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "readme-generator",
+  "name": "static-site",
   "version": "1.0.0",
-  "description": "[How to create a Professional README](./readme-guide.md)",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,14 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.5.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/akt47/readme-generator.git"
-  },
-  "bugs": {
-    "url": "https://github.com/akt47/readme-generator/issues"
-  },
-  "homepage": "https://github.com/akt47/readme-generator#readme"
+    "inquirer": "^6.3.1"
+  }
 }
